--- a/packages/web/src/app/doc-pages/components/modal-doc/modal-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/modal-doc/modal-doc.component.html
@@ -70,7 +70,7 @@
         <ng-container ngProjectAs="sectionContent">
           <app-component-subsubsection [sectionTitle]="'Closing'">
             <ng-container ngProjectAs="sectionContent">
-              The modal requires implementation for closing. Use the callback prop 'onHide' to listen for
+              The modal requires implementation for closing. Use the callback prop 'onClose' to listen for
               click outside modal or on close button and then set the 'isShowing' prop to false.
             </ng-container>
           </app-component-subsubsection>
