Lego 1669 prop renaming chip (#811)
* prop deprecation

* new styles

Co-authored-by: Trygve Scheline Urdahl <trur@computas.com>

--- a/packages/web/src/app/doc-pages/components/chip-doc/chip-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/chip-doc/chip-doc.component.html
@@ -15,14 +15,15 @@
     <ng-container ngProjectAs="sectionContent">
       <app-component-subsection [sectionTitle]="'Removable'">
         <ng-container ngProjectAs="sectionContent">
-          The Removable chip type is removed when it's clicked.
+          Removable chip is used to show what filter the user have selected and can easily be removed by
+          clicking on them.
           <div style="display: flex; flex-direction: ChCrow" class="e-ml-n8">
             <div *ngFor="let chip of deletableChipsListInType" class="e-m-8">
               <elvia-chip
                 [value]="chip.value"
                 [color]="chip.color"
-                [disabled]="chip.disabled"
-                (onDelete)="handleOnDeleteInType($event.detail.value)"
+                [isDisabled]="chip.isDisabled"
+                (onDelete)="handleOnDeleteInType($event.target.value)"
               ></elvia-chip>
             </div>
           </div>
@@ -31,15 +32,15 @@
 
       <app-component-subsection [sectionTitle]="'Legend'">
         <ng-container ngProjectAs="sectionContent">
-          Legend chips should be used for filtering, primarily for visualization in graphs (e.g. colors
-          representing different lines in a graph).
+          Legend chips are a combination of a chip and a legend with multiple choice. It visualizes the color
+          of the data you are toggling on/off in a graph or map.
           <div style="display: flex; flex-direction: row" class="e-ml-n8">
             <div class="e-m-8">
               <elvia-chip
                 [value]="2018"
                 type="legend"
-                selected="true"
-                (valueOnChange)="handleOnChange($event.detail.value)"
+                isSelected="true"
+                (isSelectedOnChange)="handleOnChange($event)"
               ></elvia-chip>
             </div>
             <div class="e-m-8">
@@ -47,8 +48,8 @@
                 [value]="2019"
                 type="legend"
                 color="purple"
-                selected="true"
-                (valueOnChange)="handleOnChange($event.detail.value)"
+                isSelected="true"
+                (isSelectedOnChange)="handleOnChange($event)"
               ></elvia-chip>
             </div>
             <div class="e-m-8">
@@ -56,17 +57,17 @@
                 [value]="2020"
                 type="legend"
                 color="red"
-                (valueOnChange)="handleOnChange($event.detail.value)"
+                (isSelectedOnChange)="handleOnChange($event)"
               ></elvia-chip>
             </div>
             <div class="e-m-8">
               <elvia-chip
                 [value]="2021"
-                selected="true"
+                isSelected="true"
                 type="legend"
                 color="blue"
-                disabled="true"
-                (valueOnChange)="handleOnChange($event.detail.value)"
+                isDisabled="true"
+                (isSelectedOnChange)="handleOnChange($event)"
               ></elvia-chip>
             </div>
           </div>
@@ -75,33 +76,33 @@
 
       <app-component-subsection [sectionTitle]="'Choice'">
         <ng-container ngProjectAs="sectionContent">
-          Choice chips can be used as a filter for multiple choice that you want the user to be able to toggle
-          on and off.
+          Choice chips are always showing all options the user can select from and can be toggled on/off
+          (multiple choice).
           <div style="display: flex; flex-direction: row" class="e-ml-n8">
             <div class="e-m-8">
               <elvia-chip
                 [value]="'Løpsk måler'"
                 type="choice"
                 iconType="checkmark"
-                selected="true"
-                (valueOnChange)="handleOnChange($event.detail.value)"
+                isSelected="true"
+                (isSelectedOnChange)="handleOnChange($event)"
               ></elvia-chip>
             </div>
             <div class="e-m-8">
               <elvia-chip
                 [value]="'Koblingsfeil'"
                 type="choice"
-                selected="false"
-                (valueOnChange)="handleOnChange($event.detail.value)"
+                isSelected="false"
+                (isSelectedOnChange)="handleOnChange($event)"
               ></elvia-chip>
             </div>
             <div class="e-m-8">
               <elvia-chip
                 [value]="'Negativt forbruk'"
-                selected="true"
+                isSelected="true"
                 type="choice"
-                disabled="true"
-                (valueOnChange)="handleOnChange($event.detail.value)"
+                isDisabled="true"
+                (isSelectedOnChange)="handleOnChange($event)"
               ></elvia-chip>
             </div>
           </div>
@@ -138,7 +139,7 @@
               <elvia-chip
                 [value]="chip.value"
                 [color]="chip.color"
-                [disabled]="chip.disabled"
+                [isDisabled]="chip.disabled"
                 (onDelete)="handleOnDeleteColor($event.detail.value)"
               ></elvia-chip>
             </div>
