--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -180,8 +180,8 @@
       [isCompact]="false"
       [isDisabled]="false"
       label="testing something"
-      [defaultValue]="dropdownDefOptions"
-      [options]="dropdownOptions"
+      [value]="dropdownDefOptions"
+      [items]="dropdownOptions"
     ></elvia-dropdown>
   </div>
 
