--- a/packages/web/src/app/doc-pages/cms/cms-page/cms-page.component.scss
+++ b/packages/web/src/app/doc-pages/cms/cms-page/cms-page.component.scss
@@ -199,6 +199,20 @@ $pageIndentedMargin: 72px;
   }
 }
 
+.cms-paragraph {
+  code {
+    font-family: 'Red Hat Mono', Verdana, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: inherit;
+
+    background: var(--e-grey-05);
+    border-radius: 4px;
+    padding: 0 2px;
+  }
+}
+
 .cms-landing-page {
   text-align: center;
   &__img {
