fix deprecation warning for webcomponents

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -193,9 +193,9 @@
     <h3>Modal</h3>
     <button class="e-btn" (click)="isModalShowing = !isModalShowing">Show modal</button>
     <elvia-modal
-      (onHide)="isModalShowing = !isModalShowing"
+      (onClose)="isModalShowing = !isModalShowing"
       [isShowing]="isModalShowing"
-      [title]="'Redigere bidragsytere'"
+      [heading]="'Redigere bidragsytere'"
       [disableClose]="false"
     >
       <div slot="content">Content</div>
