--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -94,7 +94,7 @@
   <!--Carousel-->
   <div class="example-wrapper">
     <h3>Carousel</h3>
-    <elvia-carousel>
+    <elvia-carousel [loop]="false" [hasConfirmationCheckmark]="true">
       <div slot="title-1">
         <h3 class="e-title-sm">title 1</h3>
       </div>
