Changed BreadcrumbLink interface + minor fixes.

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -52,7 +52,7 @@
   <!--Breadcrumb-->
   <div class="example-wrapper">
     <h3>Breadcrumbs</h3>
-    <elvia-breadcrumb [breadcrumbs]="breadcrumbsTestNoUrl"></elvia-breadcrumb>
+    <elvia-breadcrumb [items]="breadcrumbsTestNoUrl"></elvia-breadcrumb>
   </div>
 
   <!--Card-->
