--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/component-example-generator.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/component-example-generator.component.html
@@ -11,32 +11,32 @@
   >
     <div *ngIf="typeOptions.length !== 0 && !typesData" class="ceg-dropdown">
       <elvia-dropdown
-        [options]="typeOptions"
-        [defaultValue]="typeOptions[defaultType]"
+        [items]="typeOptions"
+        [value]="typeOptions[defaultType]"
         label="Type"
         (valueOnChange)="updateFormStates('type', $event); updateSelectedType($event.detail.value)"
       ></elvia-dropdown>
     </div>
     <div *ngIf="iconsOptions.length !== 0 && !typesData" class="ceg-dropdown">
       <elvia-dropdown
-        [options]="iconsOptions"
-        [defaultValue]="defaultIcon"
+        [items]="iconsOptions"
+        [value]="defaultIcon"
         label="Icon name"
         (valueOnChange)="updateFormStates('name', $event); updateSelectedType($event.detail.value, true)"
       ></elvia-dropdown>
     </div>
     <div *ngIf="typesData && typesData.length !== 0" class="ceg-dropdown">
       <elvia-dropdown
-        [options]="typeOptions"
-        [defaultValue]="typeOptions[0]"
+        [items]="typeOptions"
+        [value]="typeOptions[0]"
         label="Type"
         (valueOnChange)="updateFormStates('type', $event); updateSelectedTypeCustom($event.detail.value)"
       ></elvia-dropdown>
     </div>
     <div *ngIf="bgOptions.length !== 0" class="ceg-dropdown">
       <elvia-dropdown
-        [options]="bgOptions"
-        [defaultValue]="bgOptions[defaultBg]"
+        [items]="bgOptions"
+        [value]="bgOptions[defaultBg]"
         label="Background"
         (valueOnChange)="updateFormStates(bgObj.propName, $event); updateSelectedBg($event.detail.value)"
       ></elvia-dropdown>
