--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -2749,7 +2749,7 @@ input:focus {
   max-width: 448px;
   width: 100%;
   padding: 12px 16px;
-  font-family: Red Hat Text, Verdana, sans-serif;
+  font-family: Red Hat Display, Verdana, sans-serif;
   font-size: 16px;
   line-height: 22px;
   font-weight: 400;
@@ -3138,7 +3138,7 @@ input:focus {
   width: 100%;
   height: 48px;
   padding: 13px 16px;
-  font-family: Red Hat Text, Verdana, sans-serif;
+  font-family: Red Hat Display, Verdana, sans-serif;
   font-size: 16px;
   line-height: 22px;
   font-weight: 400;
@@ -4162,7 +4162,7 @@ input:focus {
 .e-link.e-link--card .e-link__title {
   margin: 0;
   margin-top: 10%;
-  font-family: Red Hat Text, Verdana, sans-serif;
+  font-family: Red Hat Display, Verdana, sans-serif;
   font-size: 16px;
   line-height: 23px;
   font-weight: 500;
@@ -4177,7 +4177,7 @@ input:focus {
 }
 .e-link.e-link--card .e-link__description {
   margin-top: 2%;
-  font-family: Red Hat Text, Verdana, sans-serif;
+  font-family: Red Hat Display, Verdana, sans-serif;
   font-size: 16px;
   line-height: 23px;
   font-weight: 500;
@@ -4291,7 +4291,7 @@ input:focus {
   height: 32px;
 }
 .e-link.e-link--card.e-link--shortcut .e-link__content .e-link__title {
-  font-family: Red Hat Text, Verdana, sans-serif;
+  font-family: Red Hat Display, Verdana, sans-serif;
   font-size: 16px;
   line-height: 23px;
   font-weight: 500;
@@ -7540,7 +7540,7 @@ input:focus {
 .e-form-field__label {
   display: block;
   margin-bottom: 5px;
-  font-family: Red Hat Text, Verdana, sans-serif;
+  font-family: Red Hat Display, Verdana, sans-serif;
   font-size: 16px;
   line-height: 23px;
   font-weight: 500;
@@ -7664,7 +7664,7 @@ input:focus {
   margin-bottom: 16px;
 }
 .e-fileupload__description {
-  font-family: Red Hat Text, Verdana, sans-serif;
+  font-family: Red Hat Display, Verdana, sans-serif;
   font-size: 16px;
   line-height: 22px;
   font-weight: 400;
@@ -7749,7 +7749,7 @@ input:focus {
   margin-bottom: 22px;
 }
 .e-position-picker__description {
-  font-family: Red Hat Text, Verdana, sans-serif;
+  font-family: Red Hat Display, Verdana, sans-serif;
   font-size: 16px;
   line-height: 23px;
   font-weight: 500;
@@ -7770,7 +7770,7 @@ input:focus {
 }
 
 .e-radio {
-  font-family: Red Hat Text, Verdana, sans-serif;
+  font-family: Red Hat Display, Verdana, sans-serif;
   font-size: 16px;
   line-height: 22px;
   font-weight: 400;
@@ -12775,6 +12775,16 @@ THE SOFTWARE.
   }
 }
 
+.e-title-caps {
+  font-family: Red Hat Text, Verdana, sans-serif;
+  font-size: 14px;
+  line-height: 17px;
+  font-weight: 500;
+  font-style: unset;
+  letter-spacing: 0.8px;
+  text-transform: uppercase;
+  color: inherit;
+}
 .e-text-caps {
   font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 14px;
@@ -12790,16 +12800,6 @@ THE SOFTWARE.
   font-weight: 500;
 }
 
-.e-title-caps {
-  font-family: Red Hat Text, Verdana, sans-serif;
-  font-size: 14px;
-  line-height: 17px;
-  font-weight: 500;
-  font-style: unset;
-  letter-spacing: 0.8px;
-  text-transform: uppercase;
-  color: inherit;
-}
 .e-text-lead {
   font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 24px;
@@ -12822,28 +12822,6 @@ THE SOFTWARE.
   font-weight: 500;
 }
 
-.e-text-body {
-  font-family: Red Hat Text, Verdana, sans-serif;
-  font-size: 20px;
-  line-height: 32px;
-  font-weight: 400;
-  font-style: unset;
-  letter-spacing: unset;
-  text-transform: unset;
-  color: inherit;
-}
-@media (max-width: 767px) {
-  .e-text-body {
-    font-size: 18px;
-    line-height: 29px;
-  }
-}
-
-.e-text-body b,
-.e-text-body strong {
-  font-weight: 500;
-}
-
 .e-text-lg {
   font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 20px;
@@ -12863,6 +12841,28 @@ THE SOFTWARE.
 
 .e-text-lg b,
 .e-text-lg strong {
+  font-weight: 500;
+}
+
+.e-text-body {
+  font-family: Red Hat Text, Verdana, sans-serif;
+  font-size: 20px;
+  line-height: 32px;
+  font-weight: 400;
+  font-style: unset;
+  letter-spacing: unset;
+  text-transform: unset;
+  color: inherit;
+}
+@media (max-width: 767px) {
+  .e-text-body {
+    font-size: 18px;
+    line-height: 29px;
+  }
+}
+
+.e-text-body b,
+.e-text-body strong {
   font-weight: 500;
 }
 
@@ -12910,21 +12910,6 @@ THE SOFTWARE.
   font-weight: 500;
 }
 
-.e-text-description {
-  font-family: Red Hat Text, Verdana, sans-serif;
-  font-size: 16px;
-  line-height: 28px;
-  font-weight: 400;
-  font-style: unset;
-  letter-spacing: unset;
-  text-transform: unset;
-  color: inherit;
-}
-.e-text-description b,
-.e-text-description strong {
-  font-weight: 500;
-}
-
 .e-text-md {
   font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 16px;
@@ -12937,6 +12922,21 @@ THE SOFTWARE.
 }
 .e-text-md b,
 .e-text-md strong {
+  font-weight: 500;
+}
+
+.e-text-description {
+  font-family: Red Hat Text, Verdana, sans-serif;
+  font-size: 16px;
+  line-height: 28px;
+  font-weight: 400;
+  font-style: unset;
+  letter-spacing: unset;
+  text-transform: unset;
+  color: inherit;
+}
+.e-text-description b,
+.e-text-description strong {
   font-weight: 500;
 }
 
@@ -12970,21 +12970,6 @@ THE SOFTWARE.
   font-weight: 500;
 }
 
-.e-text-info {
-  font-family: Red Hat Text, Verdana, sans-serif;
-  font-size: 14px;
-  line-height: 22px;
-  font-weight: 400;
-  font-style: unset;
-  letter-spacing: unset;
-  text-transform: unset;
-  color: inherit;
-}
-.e-text-info b,
-.e-text-info strong {
-  font-weight: 500;
-}
-
 .e-text-sm {
   font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 14px;
@@ -12997,6 +12982,21 @@ THE SOFTWARE.
 }
 .e-text-sm b,
 .e-text-sm strong {
+  font-weight: 500;
+}
+
+.e-text-info {
+  font-family: Red Hat Text, Verdana, sans-serif;
+  font-size: 14px;
+  line-height: 22px;
+  font-weight: 400;
+  font-style: unset;
+  letter-spacing: unset;
+  text-transform: unset;
+  color: inherit;
+}
+.e-text-info b,
+.e-text-info strong {
   font-weight: 500;
 }
 
@@ -13100,7 +13100,6 @@ THE SOFTWARE.
 .e-text-img {
   font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 18px;
-  text-align: center;
   line-height: 29px;
   font-weight: 400;
   font-style: italic;
@@ -13121,7 +13120,7 @@ THE SOFTWARE.
 }
 
 .e-text-label {
-  font-family: Red Hat Text, Verdana, sans-serif;
+  font-family: Red Hat Display, Verdana, sans-serif;
   font-size: 16px;
   line-height: 23px;
   font-weight: 500;
@@ -13136,7 +13135,7 @@ THE SOFTWARE.
 }
 
 .e-text-option {
-  font-family: Red Hat Text, Verdana, sans-serif;
+  font-family: Red Hat Display, Verdana, sans-serif;
   font-size: 16px;
   line-height: 22px;
   font-weight: 400;
