--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -2749,7 +2749,7 @@ input:focus {
   max-width: 448px;
   width: 100%;
   padding: 12px 16px;
-  font-family: Red Hat Display, Verdana, sans-serif;
+  font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 16px;
   line-height: 22px;
   font-weight: 400;
@@ -3138,7 +3138,7 @@ input:focus {
   width: 100%;
   height: 48px;
   padding: 13px 16px;
-  font-family: Red Hat Display, Verdana, sans-serif;
+  font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 16px;
   line-height: 22px;
   font-weight: 400;
@@ -4162,7 +4162,7 @@ input:focus {
 .e-link.e-link--card .e-link__title {
   margin: 0;
   margin-top: 10%;
-  font-family: Red Hat Display, Verdana, sans-serif;
+  font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 16px;
   line-height: 23px;
   font-weight: 500;
@@ -4177,7 +4177,7 @@ input:focus {
 }
 .e-link.e-link--card .e-link__description {
   margin-top: 2%;
-  font-family: Red Hat Display, Verdana, sans-serif;
+  font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 16px;
   line-height: 23px;
   font-weight: 500;
@@ -4291,7 +4291,7 @@ input:focus {
   height: 32px;
 }
 .e-link.e-link--card.e-link--shortcut .e-link__content .e-link__title {
-  font-family: Red Hat Display, Verdana, sans-serif;
+  font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 16px;
   line-height: 23px;
   font-weight: 500;
@@ -7540,7 +7540,7 @@ input:focus {
 .e-form-field__label {
   display: block;
   margin-bottom: 5px;
-  font-family: Red Hat Display, Verdana, sans-serif;
+  font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 16px;
   line-height: 23px;
   font-weight: 500;
@@ -7664,7 +7664,7 @@ input:focus {
   margin-bottom: 16px;
 }
 .e-fileupload__description {
-  font-family: Red Hat Display, Verdana, sans-serif;
+  font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 16px;
   line-height: 22px;
   font-weight: 400;
@@ -7749,7 +7749,7 @@ input:focus {
   margin-bottom: 22px;
 }
 .e-position-picker__description {
-  font-family: Red Hat Display, Verdana, sans-serif;
+  font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 16px;
   line-height: 23px;
   font-weight: 500;
@@ -7770,7 +7770,7 @@ input:focus {
 }
 
 .e-radio {
-  font-family: Red Hat Display, Verdana, sans-serif;
+  font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 16px;
   line-height: 22px;
   font-weight: 400;
@@ -13120,7 +13120,7 @@ THE SOFTWARE.
 }
 
 .e-text-label {
-  font-family: Red Hat Display, Verdana, sans-serif;
+  font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 16px;
   line-height: 23px;
   font-weight: 500;
@@ -13135,7 +13135,7 @@ THE SOFTWARE.
 }
 
 .e-text-option {
-  font-family: Red Hat Display, Verdana, sans-serif;
+  font-family: Red Hat Text, Verdana, sans-serif;
   font-size: 16px;
   line-height: 22px;
   font-weight: 400;
