--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -6,7 +6,7 @@
     <h3>Test your component here</h3>
     <!--Normal version-->
     <div class="e-bg-white">
-      <elvia-popover header="BankID" type="list" selectable="true" hasDivider horizontalPosistion="right">
+      <elvia-popover header="BankID" type="list" isSelectable="true" hasDivider horizontalPosistion="right">
         <button slot="trigger" class="e-btn">Show popover</button>
         <div slot="content" class="ewc-popover__list">
           <div class="ewc-popover__list-group">
