--- a/packages/components/components/elvis-loader/test/index.html
+++ b/packages/components/components/elvis-loader/test/index.html
@@ -27,7 +27,7 @@
         var trigger = document.createElement('button');
         trigger.innerHTML = 'Trigger';
         trigger.setAttribute('slot', 'trigger');
-        elem.setAttribute('horizontalPosistion', 'right');
+        elem.setAttribute('horizontalPosition', 'right');
         elem.setAttribute('content', 'Dette er en test');
         elem.appendChild(trigger);
         document.body.appendChild(elem);
@@ -52,7 +52,7 @@
       </span>
       <span class="e-btn__title">Add popover</span>
     </button>
-    <elvia-popover horizontalPosistion="right" content="Dette er en test">
+    <elvia-popover horizontalPosition="right" content="Dette er en test">
       <button slot="trigger">Trigger</button>
     </elvia-popover>
     <br />
