Lego 1682  popover props fix (#829)
* modal deprecation

* new yarn.lock

* add comments to modal deprecation config

* fix

* changelog

* fix deprecation warning for webcomponents

* mark deprecated props in config

* deprecated props exceptt call functions

* updated config fo popover

* changed linting

* updated example in app.js

* replaced isShowingOnChange with onOpen & onClose events

* updates after sonarcloud

* update isShowingOnChange in doc, updated config, removed double imports

* deprecated selectable prop, now uses new isSelectable in popover instead

* updated changelog for popover

* fix spelling error in new props

Co-authored-by: Trygve Scheline Urdahl <trur@computas.com>

--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/component-example-generator.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/component-example-generator.component.html
@@ -80,7 +80,7 @@
       class="ceg-side-filters-mobile"
       *ngIf="formGroupList.length !== 0 && hasSideFilters && enableFilters"
     >
-      <elvia-popover [posX]="'left'" [posY]="'bottom'">
+      <elvia-popover [horizontalPosition]="'left'" [verticalPosition]="'bottom'">
         <button slot="trigger" class="e-btn e-btn--icon" aria-label="Open side filter popover">
           <span class="e-btn__icon">
             <i class="e-icon e-icon--list" *ngIf="selectedBg !== 'Dark grey'" aria-hidden="true"></i>
