build colors in elvis.js from elvia-colors

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -6,23 +6,10 @@
     <h3>Test your component here</h3>
     <!--Normal version-->
     <div class="e-bg-white">
-      <elvia-popover header="BankID" type="list" isSelectable="true" hasDivider horizontalPosition="right">
-        <button slot="trigger" class="e-btn">Show popover</button>
-        <div slot="content" class="ewc-popover__list">
-          <div class="ewc-popover__list-group">
-            <button>
-              <elvia-icon name="checkBold" size="xs"></elvia-icon>
-              <span>Rediger</span>
-            </button>
-            <button>
-              <span>Slett</span>
-            </button>
-            <a>
-              <span>Last ned</span>
-            </a>
-          </div>
-        </div>
-      </elvia-popover>
+      <i class="e-icon e-icon--lock e-icon--color-elvia-charge"></i>
+      <i class="e-icon e-icon--lock e-icon--color-error"></i>
+      <i class="e-icon e-icon--lock e-icon--color-disabled"></i>
+      <i class="e-icon e-icon--lock e-icon--color-orange-mango"></i>
     </div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
